[project]
name = "client-bus-route-optimization"
version = "0.1.0"
description = ""
authors = [
    {name = "nguyenlamnghia",email = "nghia.nl214022@sis.hust.edu.vn"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pika (>=1.3.2,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "typer (>=0.21.0,<0.22.0)"
]

[tool.poetry]
packages = [{include = "client_bus_route_optimization", from = "src"}]

[tool.poetry.scripts]
client-bro = "client_bus_route_optimization.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
